# sset

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: field_api.md  func_api.md  gen_api.md
sset/: christina_example.py  ellc_documentation.txt  field.py  fit_bkg_debugged.py  generator_classes.py  generator_classes10.py  put_it_together.ipynb  tess_cbv.ipynb  trc_funcs.py
tess_sim/: discarded_code.py  field.py  generator_classes.py  goddard_work.ipynb  kepler_cbv.ipynb  put_it_together.ipynb  tess_cbv.ipynb  trc_funcs.py
tests/: test_trc_funcs.py  trc_funcs_test.py
